# app/http/swagger/swagger.json
@@ -16,6 +16,84 @@
     },
     "basePath": "/",
     "paths": {
+        "/answer/create": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "创建回答",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "qa"
+                ],
+                "summary": "创建回答",
+                "parameters": [
+                    {
+                        "description": "创建回答参数",
+                        "name": "answerCreateParam",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/qa.answerCreateParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "操作成功",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/answer/delete": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "创建回答",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "qa"
+                ],
+                "summary": "创建回答",
+                "parameters": [
+                    {
+                        "description": "删除id",
+                        "name": "answerDeleteParam",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/qa.answerDeleteParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "操作成功",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/demo/demo": {
             "get": {
                 "description": "获取所有用户",
@@ -136,6 +214,45 @@
                         "description": "操作成功",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/question/detail": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "获取问题详情，包括问题的所有回答",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "qa"
+                ],
+                "summary": "获取问题详情",
+                "parameters": [
+                    {
+                        "description": "问题id",
+                        "name": "param",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/qa.questionDetailParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "问题详情，带回答和作者",
+                        "schema": {
+                            "type": "QuestionDTO"
                         }
                     }
                 }
@@ -323,6 +440,32 @@
                 }
             }
         },
+        "qa.answerCreateParam": {
+            "type": "object",
+            "required": [
+                "context",
+                "question_id"
+            ],
+            "properties": {
+                "context": {
+                    "type": "string"
+                },
+                "question_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "qa.answerDeleteParam": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "qa.questionCreateParam": {
             "type": "object",
             "required": [
@@ -335,6 +478,17 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "qa.questionDetailParam": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
